--- a/modules/relax/includes/css/teal.css
+++ b/modules/relax/includes/css/teal.css
@@ -341,6 +341,68 @@ button[disabled]:active, button[disabled], input[type="reset"][disabled]:active,
 	margin: 0.3em auto;
 	padding: 0pt 1em 0pt 3.5em;
 }
+/**============================== Table Listings ==============================**/
+.tablelisting{
+	background-color: #CDCDCD;
+	margin:10px 0pt 15px;
+	border-spacing: 1px;
+	font-size: 8pt;
+	border-collapse: inherit !important;
+}
+.tablelisting tr{
+	background-color: #F7F7F7;
+}
+.tablelisting tr.even{
+	background-color: #ffffff;
+}
+.tablelisting tr:hover { background: #d7eafe}
+.tablelisting th {
+	text-align: left;
+	background-color: #E0EFEF;
+	padding: 5px;
+}
+.tablelisting th.center{
+	text-align:center;
+}
+.tablelisting th a {
+	color: #000;
+	background-color: inherit;
+	text-decoration: none;
+	border-bottom: none;
+}
+.tablelisting th a:hover {
+	color: #CC0001; 
+	background-color: inherit;	
+}
+.tablelisting a {
+	text-decoration: none;
+	border-bottom: none;
+}
+.tablelisting a:hover {
+	color: #CC0001; 
+	background-color: inherit;	
+}
+.tablelisting a {
+	text-decoration: none;
+	border-bottom: none;
+}
+.tablelisting a:hover {
+	color: #CC0001; 
+	background-color: inherit;	
+}
+.tablelisting td{
+	padding: 5px;
+}
+.tablelisting td.center{
+	text-align: center;
+}
+.tablelisting #checkboxHolder{
+	width: 20px;
+}
+.tablelisting #status{
+	text-align: center;
+	width: 60px;
+}
 /**++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++**/
 /**==================             End of Theme                     ==================**/
 /**++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++**/
