updated the logo and promo materials
Signed-off-by: Luis Majano <lmajano@gmail.com>

--- a/modules/relax/includes/css/teal.css
+++ b/modules/relax/includes/css/teal.css
@@ -106,7 +106,11 @@ button[disabled]:active, button[disabled], input[type="reset"][disabled]:active,
 #logo { 
 	float:right; 
 	clear:both;
-	margin: 3px 0px 0px 0px;
+	margin: 5px 0px 0px 0px;
+}
+#logo img {
+	-moz-box-shadow: 0 0 10px #ccc;
+	-webkit-box-shadow: 0 0 10px #cccc;	
 }
 /********* Search field in header ***/
 .search_field { 		border: 1px solid #a2a2a2; }
