--- a/modules/relax/includes/css/relax.css
+++ b/modules/relax/includes/css/relax.css
@@ -2,3 +2,4 @@ h1{
 	margin-top:10px;
 }
 td.code > div.container, td.code > div.container:after, td.code > div.container:before{ content : none !important; }
+fieldset{ margin: 10px 0px 10px 0px;}
