RELAX-1 Convert API Doce UI to AJAX

--- a/includes/scss/theme.scss
+++ b/includes/scss/theme.scss
@@ -10,7 +10,9 @@
 
 //path-relative plugin includes
 @import url('../plugins/icheck/css/_all.css');
-@import url("../plugins/highlighter/styles/shCoreMidnight.css");
+//@import url("../plugins/highlighter/styles/shCoreMidnight.css");
+//@import url("../plugins/prism/prism.css");
+@import url("../plugins/prism/prism-okaidia.css");
 
 
 /*
