--- a/modules/relax/views/apidoc/_template/parameter.html
+++ b/modules/relax/views/apidoc/_template/parameter.html
@@ -3,7 +3,7 @@
 %>
 
 <div class="parameter-list list-group">
-	<div class="col-xs-12">
+	<div class="col-xs-12 bg-default">
 		<div class="parameter-column key col-sm-3 col-xs-8">
 			Name
 		</div>
