--- a/modules/relax/views/apidoc/_template/security-definitions.html
+++ b/modules/relax/views/apidoc/_template/security-definitions.html
@@ -1,6 +1,6 @@
 <!-- security definitions -->
 <div class="definition-list list-group">
-	<div class="col-xs-12">
+	<div class="col-xs-12 bg-primary">
 		<div class="definition-column key col-sm-3 col-xs-8">
 			Name
 		</div>
