--- a/includes/scss/theme.scss
+++ b/includes/scss/theme.scss
@@ -27,7 +27,8 @@
 @import "theme/_mixins.scss";
 
 @import "theme/_base.scss"; 
-@import "theme/_badges.scss"; 
+@import "theme/_badges.scss";
+@import "theme/_backgrounds.scss";  
 @import "theme/_breadcrumbs.scss";
 @import "theme/_buttons.scss";
 @import "theme/_calendar.scss";
