--- a/includes/scss/theme.scss
+++ b/includes/scss/theme.scss
@@ -13,7 +13,8 @@
 //@import url("../plugins/highlighter/styles/shCoreMidnight.css");
 //@import url("../plugins/prism/prism.css");
 @import url("../plugins/prism/prism-okaidia.css");
-
+@import url( "../plugins/messenger/css/messenger.css" );
+@import url( "../plugins/messenger/css/messenger-theme-future.css" );
 
 /*
  *
