--- a/modules/relax/views/apidoc/_template/response.html
+++ b/modules/relax/views/apidoc/_template/response.html
@@ -1,6 +1,7 @@
 <%
 	var schemaTemplate = _.template( $( "#schema-template" ).html() );
 	var exampleTemplate = _.template( $( "#example-template" ).html() );
+	var typeRef;
 %>
 <div id="<%=resourceId + '-' + key %>" class="method-panel panel panel-primary">
 		
@@ -21,12 +22,62 @@
 				<hr>
 			<% } %>
 		</div>
-		<% if( !_.isUndefined( response.schema ) ){  %>	
-		<div class="col-xs-12 schema-container">
-			<h4 class="panel-subtitle text-primary">Schema Definition:</h4>
-			<%= schemaTemplate( { "entity": response } ) %>
-		</div>
-		<% } %>
-	</div>
 
-</div>
+		<% 
+			if( !_.isUndefined( response.schema ) || !_.isUndefined( response.examples ) ){  
+				var tabIds = {};
+		%>	
+			<div class="col-xs-12 schema-container">
+				<h4 class="panel-subtitle text-primary">Schema and Examples:</h4>
+						
+				<div class="schema-tabs">
+					<ul class="nav nav-tabs" role="tablist">
+						<% if( !_.isUndefined( response.schema ) ){  
+							tabIds.schemaUID = _.uniqueId("schema");
+						%>	
+							<li role="presentation" class="active">
+								<a href="#<%=tabIds.schemaUID%>" data-toggle="tab" aria-controls="<%=tabIds.schemaUID%>">Schema Definition</a>
+							</li>
+						<% } %>
+						<% if( !_.isUndefined( response.examples ) ) { %>
+							<% 
+								_.each( response.examples, function( example, mimetype ){ 
+									typeRef = mimetype.split('/')[ mimetype.split( '/' ).length-1 ];
+									if( typeRef === 'json' ) typeRef = 'javascript';
+									tabIds[ typeRef ] = _.uniqueId( "example" );
+							%>
+							<li role="presentation">
+								<a href="#<%=tabIds[ typeRef ]%>" data-toggle="tab" aria-controls="<%=tabIds[ typeRef ]%>">Example<br>(<%=mimetype%>)</a>
+							</li>
+							<% }); %>
+						<% } %>
+					</ul>
+
+					<div class="tab-content">
+						<% if( !_.isUndefined( response.schema ) ){ %>
+							<div id="<%=tabIds.schemaUID%>" class="tab-pane fade in active schema-definition">
+								<%= schemaTemplate( { "entity": response } ) %>
+							</div>
+						<% } %>
+						<% if( !_.isUndefined( response.examples ) ) { %>
+							<% 
+								_.each( response.examples, function( example, mimetype ){ 
+									typeRef = mimetype.split('/')[ mimetype.split( '/' ).length-1 ];
+									if( typeRef === 'json' ) typeRef = 'javascript';
+							%>
+								
+								<div id="<%=tabIds[typeRef]%>" class="tab-pane fade schema-example">
+									<div class="panel panel-solid-default">
+										<pre class="language-<%=typeRef%>"><%= formatAPIExample( example, mimetype ) %></pre>
+									</div>
+								</div>
+
+							<% }); %>
+						<% } %>
+					</div><!-- /.tab-content -->
+				</div><!-- /.schema-tabs -->
+			</div><!-- /.schema-container -->
+		<% } %>
+	</div><!-- /.panel-body -->
+
+</div><!-- /.panel -->
