--- a/modules/relax/views/apidoc/_template/schema.html
+++ b/modules/relax/views/apidoc/_template/schema.html
@@ -1,3 +1,3 @@
 <div class="panel panel-solid-default">
-	<pre class="language-json"><%= formatJSONRaw( JSON.stringify( entity.schema ) ).trim() %></pre>
+	<pre class="language-javascript"><%= formatJSONRaw( JSON.stringify( entity.schema ) ).trim() %></pre>
 </div>
