--- a/modules/relax/views/apidoc/_template/relaxer-form.html
+++ b/modules/relax/views/apidoc/_template/relaxer-form.html
@@ -1,131 +1,128 @@
-<form class="relaxerForm" action="javascript:void(0)" class="form-inline">
+<form class="relaxerForm form-block" action="javascript:void(0)">
 	<%
 		var advancedSettingsUID = _.uniqueId( "advSettings" );
+		if( _.isUndefined( relaxer ) ) var relaxer = {};
 	%>
-	<div class="pull-right">
-		<a class="btn btn-default" title="Advanced Settings" data-toggle="collapse" href="#<%=advancedSettingsUID%>" aria-expanded="false" aria-controls="<%=advancedSettingsUID%>"> <img src="<%=rootAssetPath%>/includes/images/settings.png" alt="settings" height="16"/></button>
+	<div class="col-xs-12 col-sm-4 col-md-3">
+		<!--- HTTP Method --->
+		<select name="httpMethod" title="Choose your HTTP Method" class="httpMethod form-control input-lg">
+			<option value="GET"<%= (relaxer.method === 'get' ? ' selected' : '' )%>>GET</option>
+			<option value="PUT"<%= (relaxer.method === 'put' ? ' selected' : '' )%>>PUT</option>
+			<option value="POST"<%= (relaxer.method === 'post' ? ' selected' : '' )%>>POST</option>
+			<option value="DELETE"<%= (relaxer.method === 'delete' ? ' selected' : '' )%>>DELETE</option>
+			<option value="HEAD"<%= (relaxer.method === 'head' ? ' selected' : '' )%>>HEAD</option>
+			<option value="OPTIONS"<%= (relaxer.method === 'options' ? ' selected' : '' )%>>OPTIONS</option>
+		</select>
 	</div>
 
-	<fieldset>
-		<legend>Method-Resource-Format</legend>
 
-		<!--- Resource ID --->
-		<input type="hidden" name="resourceID" 	 id="resourceID" 	value="null" />
-		<input type="hidden" name="resourceTier" id="resourceTier" 	value="production" />
-
-		<div class="input-group">
-
+	<div class="input-group col-xs-12 col-sm-8 col-md-9 input-group-lg">
+			<!--- Resource or URL --->
+			<input title="The resource to hit" type="text" name="httpResource" class="httpResource form-control" value="<%=relaxer.endpoint%>" />
 			<!--- Button Bar --->
-			<div class="input-group-btn">
-				<!--- HTTP Method --->
-				<select name="httpMethod" id="httpMethod" title="Choose your HTTP Method" class="form-control input-sm">
-					<option value="GET">GET</option>
-					<option value="PUT">PUT</option>
-					<option value="POST">POST</option>
-					<option value="DELETE">DELETE</option>
-					<option value="HEAD">HEAD</option>
-					<option value="OPTIONS">OPTIONS</option>
-				</select>
-
-				<!--- Resource or URL --->
-				<input title="The resource to hit" type="text" name="httpResource" id="httpResource" size="60" class="form-control" value="" />
-
-				<!--- Format --->
-				<select name="httpFormat" id="httpFormat" title="The resource format extension (if available)" class="form-control input-sm">
-					<option value="">none</option>
-					<option>xml</option>
-					<option>json</option>
-					<option>jsont</option>
-					<option>rss</option>
-				</select>
-
-				<button type="button" class="btn btn-primary btnSendRequest" title="Send Request"> Send </button>
-			</div>
+		<div class="input-group-btn">
+		
+			<button type="button" class="btn btn-primary btnSendRequest" title="Send Request">Send <i class="fa fa-paper-plane"></i></button>
 
 		</div>
-	</fieldset>
+	</div>
 
-	<!--- Advanced Settings --->
-	<div id="<%=advancedSettingsUID%>" class="collapse well advancedSettings">
-		<!--- HTTP Basic Auth --->
-		<fieldset>
-			<% 
-				var authUID = _.uniqueId( "auth" );
-			%> 
-			<legend>
-				HTTP Basic Authentication
-				<a data-toggle="collapse" href="#<%=authUID%>" aria-expanded="false" aria-controls="<%=authUID%>">
-					<i class="fa fa-caret-down"></i>
-				</a>
-			</legend>
-			<div class="collapse" id="<%=authUID%>">
-				Username:
-				<input title="Username"  type="text" class="form-control" name="username" id="username" size="30" value="" />
-				Password:
-				<input title="Password"  type="text" class="form-control" name="password" id="password" size="30" value="" />
-			</div>
+	<% if( relaxer.extensionDetection ){ %>
+	<div class="col-xs-12">
+		<!--- Format --->
+		<select name="httpFormat" title="The resource format extension (if available)" class="httpFormat form-control input-sm">
+			<option value="">none</option>
+			<option>xml</option>
+			<option>json</option>
+			<option>jsont</option>
+			<option>rss</option>
+		</select>
+	</div>
+	<% } %>
+	<div class="col-xs-12">
+		<a class="btn btn-primary btn-block btn-lg" title="Advanced Settings" data-toggle="collapse" href="#<%=advancedSettingsUID%>" aria-expanded="false" aria-controls="<%=advancedSettingsUID%>">
+			<i class="fa fa-gears"></i> Show Advanced Options
+		</a>
 
-		</fieldset>
+		<!--- Advanced Settings --->
+		<div id="<%=advancedSettingsUID%>" class="collapse well advancedSettings">
+			<!--- HTTP Headers --->
+			<fieldset class="requestHeaders">
+				<% 
+					var headersUID = _.uniqueId( "headers" );
+				%> 
+				<legend>
+					<a data-toggle="collapse" href="#<%=headersUID%>" aria-expanded="false" aria-controls="<%=headersUID%>">
+					Request Headers
+						<i class="pull-right fa fa-caret-down"></i>
+					</a>
+				</legend>
 
-		<!--- HTTP Proxy --->
-		<fieldset>
-			<% 
-				var proxyUID = _.uniqueId( "proxy" );
-			%> 
-			<legend>
-				HTTP Proxy
-				<a data-toggle="collapse" href="#<%=proxyUID%>" aria-expanded="false" aria-controls="<%=proxyUID%>">
-					<i class="fa fa-caret-down"></i>
-				</a>
-			</legend>
+				<!--- Headers Holder --->
+				<div id="<%=headersUID%>" class="httpHeaders collapse">
+					<div class="headersFormGroup dynamicAdditions"></div>
+					<!--- Add Header --->
+					<button class="btn btn-default btn-sm dynamicAdd" data-type="header" title="Add Header" id="addHeaderButton" onclick="return false;"><i class="fa fa-plus"></i></button>
+				</div>
+			</fieldset>
 
-			<div class="collapse" id="<%=proxyUID%>">
-				Host:
-				<input title="HTTP Proxy"  type="text" class="form-control" name="httpProxy" id="httpProxy"  size="30" value="" />
-				Port:
-				<input title="HTTP Proxy Port"  type="text" class="form-control" name="httpProxyPort" id="httpProxyPort" size="30" value="" />
-			</div>
+			<!--- Query Params --->
+			<fieldset class="requestParams">
+				<% 
+					var paramsUID = _.uniqueId( "params" );
+				%>
+				<legend>
+					<a data-toggle="collapse" href="#<%=paramsUID%>" aria-expanded="false" aria-controls="<%=paramsUID%>">
+					Request Parameters
+						<i class="pull-right fa fa-caret-down"></i>
+					</a>
+				</legend>
 
-		</fieldset>
+				<!--- Parameters Holder --->
+				<div id="<%=paramsUID%>" class="httpParameters collapse">
+					<div class="parametersFormGroup dynamicAdditions"></div>
+					<!--- Add Header --->
+					<button class="btn btn-default btn-sm dynamicAdd" data-type="parameter" title="Add Parameter" id="addParameterButton" onclick="return false;"><i class="fa fa-plus"></i></button>
+				</div>
+			</fieldset>
 
-		<!--- HTTP Headers --->
-		<fieldset>
-			<% 
-				var headersUID = _.uniqueId( "headers" );
-			%> 
-			<legend>
-				API Headers
-				<a data-toggle="collapse" href="#<%=headersUID%>" aria-expanded="false" aria-controls="<%=headersUID%>">
-					<i class="fa fa-caret-down"></i>
-				</a>
-			</legend>
+			<!--- HTTP Proxy --->
+			<fieldset>
+				<% 
+					var proxyUID = _.uniqueId( "proxy" );
+				%> 
+				<legend>
+					<a data-toggle="collapse" href="#<%=proxyUID%>" aria-expanded="false" aria-controls="<%=proxyUID%>">
+					HTTP Proxy Settings
+						<i class="pull-right fa fa-caret-down"></i>
+					</a>
+				</legend>
+				<div class="collapse" id="<%=proxyUID%>">
+					Host:
+					<input title="HTTP Proxy"  type="text" class="form-control" name="httpProxy" id="httpProxy"  size="30" value="<%=relaxer.httpProxy%>" />
+					Port:
+					<input title="HTTP Proxy Port"  type="text" class="form-control" name="httpProxyPort" id="httpProxyPort" size="30" value="<%=relaxer.httpProxyPort%>" />
+				</div>
+			</fieldset>
 
-			<!--- Headers Holder --->
-			<div id="<%=headersUID%>" class="httpHeaders collapse">
-				<div class="headersFormGroup"></div>
-				<!--- Add Header --->
-				<button class="btn btn-default btn-sm dynamicAdd" data-type="header" title="Add Header" id="addHeaderButton" onclick="return false;"><i class="fa fa-plus"></i></button>
-			</div>
-		</fieldset>
-
-		<!--- Query Params --->
-		<fieldset>
-			<% 
-				var paramsUID = _.uniqueId( "params" );
-			%>
-			<legend>
-				API Parameters
-				<a data-toggle="collapse" href="#<%=paramsUID%>" aria-expanded="false" aria-controls="<%=paramsUID%>">
-					<i class="fa fa-caret-down"></i>
-				</a>
-			</legend>
-
-			<!--- Parameters Holder --->
-			<div id="<%=paramsUID%>" class="httpParameters collapse">
-				<div class="parametersFormGroup"></div>
-				<!--- Add Header --->
-				<button class="btn btn-default btn-sm dynamicAdd" data-type="parameter" title="Add Parameter" id="addParameterButton" onclick="return false;"><i class="fa fa-plus"></i></button>
-			</div>
-		</fieldset>
+			<!--- HTTP Basic Auth --->
+			<fieldset>
+				<% 
+					var authUID = _.uniqueId( "auth" );
+				%> 
+				<legend>
+					<a data-toggle="collapse" href="#<%=authUID%>" aria-expanded="false" aria-controls="<%=authUID%>">
+					HTTP Authentication Settings
+						<i class="pull-right fa fa-caret-down"></i>
+					</a>
+				</legend>
+				<div class="collapse" id="<%=authUID%>">
+					Username:
+					<input title="Username"  type="text" class="form-control" name="username" id="username" size="30" value="<%=relaxer.authUsername%>" />
+					Password:
+					<input title="Password"  type="text" class="form-control" name="password" id="password" size="30" value="<%=relaxer.authPassword%>" />
+				</div>
+			</fieldset>
+		</div>
 	</div>
 </form>
