add support for extended attributes down to the method level

--- a/modules/relax/views/apidoc/_template/method.html
+++ b/modules/relax/views/apidoc/_template/method.html
@@ -36,6 +36,8 @@
 				<hr>
 			<% } %>
 
+			<%= renderXAttributes( method, 'h4' ) %>
+
 			<% if( _.keys( method.responses ).length ) { %>
 
 				<h4 class="panel-subtitle text-primary">Responses:</h4>
