--- a/modules/relax/views/apidoc/_template/path.html
+++ b/modules/relax/views/apidoc/_template/path.html
@@ -14,6 +14,7 @@
 
 	<!--- Div Content --->
 	<div id="panel_<%=path["x-resourceId"]%>" class="collapse panel-body">
+		<%= renderXAttributes( path, 'h4' ) %>
 		<h4 class="panel-subtitle text-muted">Methods:</h4>
 		<div class="col-xs-12">
 			<% 
