--- a/modules/relax/views/apidoc/_template/api-content.html
+++ b/modules/relax/views/apidoc/_template/api-content.html
@@ -27,7 +27,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                     <!--- Service Title and Description --->
                     <h2><%= api.info.title %></h2>
                     
-                    <% if( !_.isUndefined( api.info.version ) ) { %>
+                    <% if( !_.isUndefined( api.info.version ) && api.info.version.length > 0 ) { %>
                         <h4>Version: <span class="label label-primary"><%= api.info.version %></span></h4>
                     <% } %>
 
@@ -37,31 +37,32 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                         <% if( typeof( api.info.contact ) && !_.isEmpty( api.info.contact ) ){ %>
                             <dt class="text-info">Contact:</dt>
                             <dd class="address">
+                                <ul>
                                 <% _.each( _.keys( api.info.contact ), function(contactKey){ %>
-                                    
-                                    <strong><%= contactKey.toProperCase() %>:</strong> 
-                                    
-                                    <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
-                                        <a href="<%= api.info.contact[ contactKey ] %>" target="_blank">
-                                    <% } %>
-                                    
-                                    <%= api.info.contact[ contactKey ] %>
-                                    
-                                    <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
-                                        </a>
-                                    <% } %>
-                                    
-                                    <br/>
+                                    <li class="list-unstyled">
+                                        <strong><%= contactKey.toProperCase() %>:</strong> 
+                                        
+                                        <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
+                                            <a href="<%= api.info.contact[ contactKey ] %>" target="_blank">
+                                        <% } %>
+                                        
+                                        <%= api.info.contact[ contactKey ] %>
+                                        
+                                        <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
+                                            </a>
+                                        <% } %>
+                                    </li>
                                 <% }) %>
+                                </ul>
                             </dd>
                         <% } %>
 
-                        <% if( !_.isUndefined( api.info.license ) ){ %>
+                        <% if( !_.isUndefined( api.info.license ) && !_.isUndefined( api.info.license.url ) ){ %>
                             
                             <dt class="text-info">License: 
                                 <a href="<%=api.info.license.url%>">
                                     <%= ( 
-                                        !_.isUndefined( api.info.license.name ) 
+                                        !_.isUndefined( api.info.license.name ) && api.info.license.name.length > 0 
                                             ? api.info.license.name 
                                             : api.info.license.url 
                                         )
@@ -72,7 +73,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
 
                         <% } %>
 
-                        <% if( !_.isUndefined( api.info.termsOfService ) ) { %>
+                        <% if( !_.isUndefined( api.info.termsOfService ) && api.info.termsOfService.length > 0 ) { %>
                             <% if( api.info.termsOfService.indexOf( "http" ) === 0 ){ %>          
                                 <dt class="text-info">
                                     Terms of Service: <a href="<%= api.info.termsOfService %>"><%= api.info.termsOfService %></a>
@@ -84,9 +85,40 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                                 </dd>
                             <% } %>
                         <% } %>
+
+
+                        <% if( !_.isUndefined( api.externalDocs )  && !_.isUndefined( api.externalDocs.url ) ){ %>
+                            <dt class="text-info">External Docs: 
+                                <a href="<%=api.externalDocs.url%>">
+                                    <%= ( 
+                                        !_.isUndefined( api.externalDocs.description ) && api.externalDocs.description.length > 0 
+                                            ? api.externalDocs.description 
+                                            : api.externalDocs.url 
+                                        )
+                                    %>
+                                    <i class="fa fa-globe"></i>
+                                </a>
+                            </dt>
+                        <% } %>
                     </dl>
 
-                    <!--- Entry Points --->
+                    <h3>Service Entry Points</h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            <em>Default:</em> 
+                            <a href="<%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host%>">
+                                <%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host%>
+                            </a>
+                        </li>
+                        <% if( !_.isUndefined( api[ "x-entryPoint" ] ) ) { %>
+                            <% _.each( _.keys( api[ "x-entryPoint" ] ),function( tierName ){ %>
+                                <li><em><%=tierName.toProperCase()%>:</em> <a href="<%=api[ "x-entryPoint" ][ tierName ]%>"><%=api[ "x-entryPoint" ][ tierName ]%></a></li>
+                            <% }); %>
+                        <% } %>
+                        
+                    </ul>
+
+                    <!--- Paths --->
                     <h3>Service Available Paths</h3>
 
                    <p> 
@@ -135,6 +167,8 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                         <%= paramTemplate( { "entity":api } ) %>
                     <% } %>
 
+                    <%= renderXAttributes( api ) %>
+                    
                     <div class="clearfix"></div>
 
                 </div>
