add support for DSL samples

--- a/modules/relax/views/apidoc/_template/response.html
+++ b/modules/relax/views/apidoc/_template/response.html
@@ -47,7 +47,7 @@
 									tabIds[ typeRef ] = _.uniqueId( "example" );
 							%>
 							<li role="presentation">
-								<a href="#<%=tabIds[ typeRef ]%>" data-toggle="tab" aria-controls="<%=tabIds[ typeRef ]%>">Example<br>(<%=mimetype%>)</a>
+								<a href="#<%=tabIds[ typeRef ]%>" data-toggle="tab" aria-controls="<%=tabIds[ typeRef ]%>"><%=mimetype%></a>
 							</li>
 							<% }); %>
 						<% } %>
