--- a/modules/relax/views/apidoc/_template/relaxer-resources.html
+++ b/modules/relax/views/apidoc/_template/relaxer-resources.html
@@ -8,7 +8,7 @@ var httpMethodKeys = [ 'get','put','post','patch','delete','options','head' ];
 <div class="panel-body">
     <div class="form-group">
         <h4 class="text-muted">
-            Tier Entry Point:
+            Entry Points:
         </h4>
 
         <% if( !_.isUndefined( api[ "x-entryPoint" ] ) ){ %>
@@ -18,8 +18,8 @@ var httpMethodKeys = [ 'get','put','post','patch','delete','options','head' ];
                     _.each( _.keys( api[ "x-entryPoint" ] ), function( entryPoint ){
                         var baseUrl = api[ "x-entryPoint" ][ entryPoint ];
                 %>
-                <option value="<%=baseUrl%>">(<%=entryPoint.toLowerCase()%>) <%=baseUrl%></option>
-                <% }); %>
+                <option value="<%=baseUrl + api.basePath%>">(<%=entryPoint.toLowerCase()%>) <%=baseUrl + api.basePath%></option>
+                <% } ); %>
 
             </select>
         <%  } else {  %>
