fix missing base path when x-entryPoint is not present

--- a/modules/relax/views/apidoc/_template/relaxer-resources.html
+++ b/modules/relax/views/apidoc/_template/relaxer-resources.html
@@ -27,7 +27,7 @@ var httpMethodKeys = [ 'get','put','post','patch','delete','options','head' ];
                 name="resourceTier" 
                 class="form-control input-sm" 
                 type="text" 
-                value="<%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host%>"
+                value="<%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host + api.basePath%>"
             />
         <% } %>  
     </div><!-- /.form-group -->
