--- a/modules/relax/views/apidoc/_template/relaxer-history.html
+++ b/modules/relax/views/apidoc/_template/relaxer-history.html
@@ -1,33 +1,114 @@
 <!--- Request History --->
-<div class="panel panel-default">
+<div class="panel panel-primary">
     <div class="panel-heading">
-        <h3 class="panel-title">Request History</h3>
-    </div>
-    <div class="panel-body">
-    	
-    	<!--- MessageHolder --->
-		<div id="requestHistoryMessages" class="alert alert-info" style="display:none"></div>
-		<p class="center">
-			<!--- Selection Box --->
-			<select name="requestHistory" id="requestHistory" class="form-control input-sm">
-				
-					<option value="null">Select History Item</option>
-					<% for ( var i=0; i < requests.length; i++ ) { %>
-						<option value='<%=i%>'>( <%=request.method.toUpperCase()%> ) <%=request.path%></option>
-					<% } %>
-			</select>
-		</p>
+        <h3 class="panel-title">
+        	Request History
 
-		<p class="text-center">
-			<!--- Clear History Command --->
-			<a href="javascript:void(0)" class="btn btn-danger btnClearHistory" data-toggle="tooltip" title="Clear the request history">
+			<a href="javascript:void(0)" class="btnClearHistory pull-right" data-toggle="tooltip" title="Clear the request history">
 				<i class="fa fa-recycle"></i>
 			</a>
 
-			<!--- Replay Command --->
-			<a href="javascript:void(0)" class="btn btn-primary btnReplayHistoryLast" data-toggle="tooltip" title="Replay last request">
-				<i class="fa fa-retweet"></i>
-			</a>
-		</p>
+        </h3>
+    </div>
+    <div class="panel-body">
+
+    	<% 
+    		var h = 0;
+    		_.each( history, function( historyItem ){ 
+
+    			console.log( historyItem );
+
+    	%>
+
+    	<div class="panel panel-default relaxer-history-panel" data-index="<%= h %>">
+
+    		<div class="panel-heading">
+
+		        <h3 class="panel-title" style="text-transform: lowercase">
+		        	<a role="button" data-toggle="collapse" href="#history_panel_<%=h%>" aria-expanded="false" aria-controls="history_panel_<%=h%>">
+		        		<small><i class="fa fa-chevron-down"></i></small>	
+		        	</a>
+
+		        	<code><%= historyItem.request.resource %></code>
+
+		        	<!--- Replay Command --->
+					<a href="javascript:void(0)" class="btnReplayHistoryIndex pull-right" data-toggle="tooltip" title="Replay this request">
+						<i class="fa fa-retweet"></i>
+					</a>
+
+		        </h3>
+
+		    </div>	
+
+		    <div id="history_panel_<%=h%>" class="collapse panel-body">
+		    	<h4>Request</h4>
+		    	<dl>
+		    		<dt>Entry Point URL</dt>
+		    		<dd><%= historyItem.request.resource %></dd>
+
+		    		<dt>HTTP Method</dt>
+		    		<dd><%= historyItem.request.method %></dd>
+
+		    		<% if( !_.isEmpty( historyItem.request.data ) ){ %>
+
+			    		<dt>Request Parameters</dt>
+			    		<dd>
+			    			<ul class="list">
+			    				<% _.each( historyItem.request.data, function( param, key, data ){ %>	
+				    				<li>
+						    			<code><%= key %></code> : <code><%= param %></code>
+						    		</li> 
+			    				<% }) %>
+			    			</ul>
+			    				
+			    		</dd>
+		    			
+		    		<% } %>
+
+
+		    		<% if( !_.isEmpty( historyItem.request.headers ) ){ %>
+
+			    		<dt>Request Headers</dt>
+			    		<dd>
+			    			<ul class="list">
+			    				<% _.each( historyItem.request.headers, function( param, key, headers ){ %>	
+				    				<li>
+						    			<code><%= key %></code> : <code><%= param %></code>
+						    		</li> 
+			    				<% }) %>
+			    			</ul>
+			    				
+			    		</dd>
+		    			
+		    		<% } %>
+
+		    	</dl>
+
+		    	<h4>Response</h4>
+		    	<%
+		    		var responseEcho = JSON.parse( historyItem.response.responseText );
+		    		var responseObject = {
+                        "status": responseEcho.status_code,
+                        "statusText": responseEcho.status_text,
+                        "responseText": responseEcho.filecontent,
+                        getAllResponseHeaders: function(){ 
+                            return responseEcho.responseheader;
+                        },
+                        getResponseHeader: function( headerName ){
+                            return responseEcho.responseheader[ headerName ];
+                        }
+                    }
+		    	%>
+
+		    	<%= responseTemplate( { "response" : responseObject }  ) %>
+
+		   	</div>
+
+    	</div>
+
+    	<% 
+	    		h++;
+	    	});
+    	%>
     </div>
 </div> <!--- panel history --->
